tests/negative/import8_b.toit
// Copyright (C) 2019 Toitware ApS. All rights reserved.

// Does *not* export A.

class B:
